增加排料角度和间距设置

--- a/AnyDraw/MainWindow.xaml
+++ b/AnyDraw/MainWindow.xaml
@@ -233,8 +233,8 @@
                                    Icon="{Binding Source={x:Static ax:Icons.MeasureLength}}" Margin="0,0,7,0"/>
                 </Fluent:RibbonGroupBox>                 
              </Fluent:RibbonTabItem>
-            <Fluent:RibbonTabItem Header="套料"  Width="50">
-                <Fluent:RibbonGroupBox Header="布局" Margin="7,0,0,0" >
+            <Fluent:RibbonTabItem Header="排料"  Width="50">
+                <Fluent:RibbonGroupBox Header="排料" Margin="7,0,0,0" >
                     <Fluent:Button Header="布局"  Command="{Binding NestCommand}" 
                                    Icon="{Binding Source={x:Static ax:Icons.Group}}" Margin="0,0,7,0"/>
                 </Fluent:RibbonGroupBox>
